fixing tests in WithProblemsTests